# shapython

./: pyproject.toml
telemetrytest/: actions.py  app.py  containers.py  middleware.py  services.py
tests/: test_telemetrytest.py
